--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <error-page>
         <location>/View/Customer/404-error.jsp</location>
     </error-page>
-
+ 
     <session-config>
         <session-timeout>30</session-timeout>
         <cookie-config>
@@ -19,5 +19,16 @@
     <welcome-file-list>
         <welcome-file>/View/Customer/index.jsp</welcome-file>
     </welcome-file-list>
+    
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.nhom8.filter.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 
 </web-app>
+    
